--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   database:
-    image: "postgres:13-alpine3.15"
+    image: "postgres:13"
     restart: always
     ports:
       - "5432:5432"
